log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: log-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: log-pong-volume
          persistentVolumeClaim:
            claimName: log-pong-claim

        - name: log-output-configmap-volume
          configMap:
            name: log-output-configmap
            items:
              - key: information.txt
                path: information.txt
      containers:
        - name: log-output-worker
          image: europe-north1-docker.pkg.dev/nomadic-charge-446815-j2/kubernetes-course/log-output-worker:latest
          volumeMounts:
            - name: log-pong-volume
              mountPath: /usr/src/app/files
        - name: log-output-web
          image: europe-north1-docker.pkg.dev/nomadic-charge-446815-j2/kubernetes-course/log-output-web:latest
          volumeMounts:
            - name: log-pong-volume
              mountPath: /usr/src/app/files
            - name: log-output-configmap-volume
              mountPath: /config
